rustreapi/rustreapi/tests/snapshots/layout_test__test4_verify_compat_with_lfs_setstripe.snap
---
source: rustreapi/tests/layout_test.rs
expression: v
snapshot_kind: text
---
[
    SingleLayout {
        pattern: 0,
        stripe_size: 2097152,
        stripe_count: 2,
        osts: [
            1,
            0,
        ],
        mirror_count: 1,
        comp_flags: CompEntryFlags[],
        pool_name: Some(
            "testp",
        ),
        start: 0,
        end: 18446744073709551615,
        comp_id: 0,
        lcmd_flags: 0,
    },
]
