rustreapi/rustreapi/tests/snapshots/layout_test__test8_default_layout_for_generic_file.snap
---
source: rustreapi/tests/layout_test.rs
expression: v
snapshot_kind: text
---
[
    SingleLayout {
        pattern: 0,
        stripe_size: 4194304,
        stripe_count: 1,
        stripe_offset: 1,
        objects_valid: false,
        pool_name: None,
        start: 0,
        end: 18446744073709551615,
        comp_id: 0,
        lcmd_flags: 0,
    },
]
